# broadcastr

./: Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
openrc/: broadcastr.confd  broadcastr.initd
src/: main.rs  nostr.rs  nostr_helpers.rs  nostr_utils.rs  policy.rs  relay_lists.rs  relays.rs  spam.rs
