[package]
categories = ["network-programming"]
description = "Broadcast Nostr events to other relays"
documentation = "https://github.com/codonaft/broadcastr#readme"
edition = "2024"
keywords = ["nostr", "relay", "social", "proxy", "server"]
license = "MIT OR Apache-2.0"
name = "broadcastr"
readme = "README.md"
repository = "https://github.com/codonaft/broadcastr"
version = "0.0.3"

[dependencies]
anyhow = "1"
argh = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
governor = "0.10"
httparse = "1"
humantime = "2"
log = "0.4"
nonzero_ext = "0.3"
nostr-relay-pool = "0.44"
nostr-sdk = "0.44"
reqwest = { version = "0.13", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
serde = "1"
simplelog = "0.12"
socket2 = { version = "0.6", features = ["all"] }
tokio = "1"
tokio-graceful-shutdown = "0.19"
tokio-tungstenite = "0.28"
tungstenite = "0.28"
